# onthefly-recognition

./: .gitignore  CMakeLists.txt  README.md
OTFR_ROS/: .gitignore  CMakeLists.txt  OTFR_ROS.thrift  OTFR_ROS.xml  README.md
OTFR_ROS/app/: CMakeLists.txt
OTFR_ROS/app/conf/: OTFR_ROS.ini
OTFR_ROS/app/scripts/: OTFR_ROS_APP.xml.template
OTFR_ROS/include/: OTFR_ROS.h  coordThread.h  dispThread.h  imThread.h  sensor_msgs_Image.h  sensor_msgs_RegionOfInterest.h  std_msgs_Header.h  std_msgs_Int32MultiArray.h  std_msgs_MultiArrayDimension.h  std_msgs_MultiArrayLayout.h  stereo_msgs_DisparityImage.h
OTFR_ROS/src/: OTFR_ROS.cpp  coordThread.cpp  dispThread.cpp  imThread.cpp
OTFR_ROS/std_msgs/: Int32MultiArray.msg  MultiArrayLayout.msg
OTFR_ROS/stereo_msgs/: DisparityImage.msg.msg
OTFR_ROS/walkman_gaze/: CMakeLists.txt  package.xml
OTFR_ROS/walkman_gaze/src/: track_blob.cpp
app/: CMakeLists.txt
app/LUA/: onTheFlyRec_funcs.lua  onTheFlyRec_gaze.lua  onTheFlyRec_interact_fsm.lua  onTheFlyRec_main.lua  onTheFlyRec_root_fsm.lua  readme.txt  verbalInteraction.txt
app/LUA/laptop/: onTheFlyRec_interact_fsm_laptop.lua  onTheFlyRec_main_laptop.lua  onTheFlyRec_root_fsm_laptop.lua
app/LUA/mobile/: onTheFlyRec_funcs_mobile.lua  onTheFlyRec_interact_fsm_mobile.lua  onTheFlyRec_main_mobile.lua  onTheFlyRec_root_fsm_mobile.lua
app/conf/: Orbecc_Astra.ini  config_DS400serie.ini  config_DS400serie_320.ini  dictionary_sc.ini  sparseCoder.ini
app/scripts/: On_The_Fly_Recognition_with_GURLS.xml  ontheFlyRecognition.xml  ontheFlyRecognitionLUA.xml  ontheflyRecognition_depth.xml.template  ontheflyRecognition_depth_NO_SFM.xml  ontheflyRecognition_depth_NO_SFM_GIE.xml  ontheflyRecognition_depth_NO_SFM_GIE_new.xml  ontheflyRecognition_depth_NO_SFM_GIEvsCaffe.xml  ontheflyRecognition_depth_ROS.xml.template  ontheflyRecognition_depth_tool.xml.template  ontheflyRecognition_laptop_prepare.xml  ontheflyRecognition_laptop_prepare_astra.xml  ontheflyRecognition_laptop_prepare_realsense.xml  ontheflyRecognition_laptop_start.xml  ontheflyRecognition_motion.xml.template  ontheflyRecognition_motion_LUA.xml.template  ontheflyRecognition_motion_LUA_GURLS.xml.template  ontheflyRecognition_with_tools.xml.template  speechRecognizer.rad  tool_use_demo_OTFR.xml.template
managerOnTheFly/: CMakeLists.txt
managerOnTheFly/include/: CropperThread.h  ManagerThread.h  ScorerThread.h  definitions.h
managerOnTheFly/src/: CropperThread.cpp  ManagerThread.cpp  ScorerThread.cpp  main.cpp
src/: CMakeLists.txt
src/linearClassifier/: CMakeLists.txt  FindLibSVM.cmake  FindLibSVMLin.cmake
src/linearClassifier/include/: SVMClassifier.h  SVMLinear.h  SVMNonLin.h  linearClassifierThread.h
src/linearClassifier/src/: SVMClassifier.cpp  SVMLinear.cpp  SVMNonLin.cpp  linearClassifierModule.cpp  linearClassifierThread.cpp
src/managerOnTheFly/: CMakeLists.txt  main.cpp
src/showOnTheFly/: CMakeLists.txt  main.cpp
src/sparseCoder/: CMakeLists.txt  DictionaryLearning.cpp  DictionaryLearning.h  SiftGPU_Extractor.cpp  main.cpp
